draw with mouse

--- a/brickleedit/src/gui/resources/resource.qrc
+++ b/brickleedit/src/gui/resources/resource.qrc
@@ -11,5 +11,7 @@
         <file>icons/plus.png</file>
         <file>icons/up.png</file>
         <file>icons/newSprite.png</file>
+        <file>icons/brush.png</file>
+        <file>icons/selection.png</file>
     </qresource>
 </RCC>
