--- a/brickleedit/src/gui/brushmanager/brushdock.ui
+++ b/brickleedit/src/gui/brushmanager/brushdock.ui
@@ -7,13 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>421</width>
-    <height>181</height>
+    <height>255</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>332</width>
-    <height>100</height>
+    <height>255</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -215,6 +221,24 @@
      </layout>
     </item>
     <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Canvas Node</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="canvasNodeName">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -222,7 +246,7 @@
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
-        <height>40</height>
+        <height>1</height>
        </size>
       </property>
      </spacer>
