outline selection list

--- a/brickleedit/src/gui/resources/resource.qrc
+++ b/brickleedit/src/gui/resources/resource.qrc
@@ -16,5 +16,6 @@
         <file>icons/grid.png</file>
         <file>icons/pickAsBrush.png</file>
         <file>icons/erase.png</file>
+        <file>icons/deselect.png</file>
     </qresource>
 </RCC>
