correct deselect after node delete - better icons - layer lock support

--- a/brickleedit/src/gui/scenetree/scenetreedock.ui
+++ b/brickleedit/src/gui/scenetree/scenetreedock.ui
@@ -99,7 +99,7 @@
            <bool>true</bool>
           </property>
           <property name="columnCount">
-           <number>3</number>
+           <number>4</number>
           </property>
           <column>
            <property name="text">
@@ -114,6 +114,11 @@
           <column>
            <property name="text">
             <string>Lock</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string/>
            </property>
           </column>
          </widget>
