--- a/brickleedit/src/gui/resources/resource.qrc
+++ b/brickleedit/src/gui/resources/resource.qrc
@@ -18,5 +18,7 @@
         <file>icons/erase.png</file>
         <file>icons/deselect.png</file>
         <file>icons/eyeOpen.png</file>
+        <file>icons/locked.png</file>
+        <file>icons/unlocked.png</file>
     </qresource>
 </RCC>
