Move selected nodes to current layer

--- a/brickleedit/src/gui/selectionmanager/selectiondock.ui
+++ b/brickleedit/src/gui/selectionmanager/selectiondock.ui
@@ -79,6 +79,19 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="reparentNodes">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+        <property name="text">
+         <string>Move to current Layer</string>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
